# reward-system

./: README.md  reward-system.cabal
src/: Main.hs
src/Graph/: Forest.hs  Tree.hs
src/Reward/: Ranking.hs
tests/: MainTest.hs
tests/Graph/: ForestTest.hs  TreeTest.hs
tests/Reward/: RankingTest.hs
