name:                reward-system
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/reward-system#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
data-files:          src/static/index.html
cabal-version:       >=1.10

library
  hs-source-dirs:     src, src/Graph, src/Reward
  exposed-modules:    Graph.Tree, Graph.Forest, Reward.Ranking
  build-depends:      base >= 4.7 && < 5,
                      network,
                      wai                 >= 3.0.0    && < 3.3,
                      wai-extra           >= 3.0.0    && < 3.1,
                      bytestring,
                      directory,
                      http-types,
                      text,
                      mtl,
                      stm,
                      aeson,
                      scotty,
                      containers
  default-language:   Haskell2010


executable reward-system
  hs-source-dirs:      src
  other-modules:       Graph.Forest, Graph.Tree, Reward.Ranking, Paths_reward_system
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       network,
                       wai,
                       wai-extra,
                       bytestring,
                       directory,
                       http-types,
                       text,
                       mtl,
                       stm,
                       scotty,
                       aeson,
                       containers
